fixed spacing, new donation link

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,11 +93,6 @@ header {
   .nav-pulls li {
     float: left;
   }
-  
-  
-
-  
-  
 }
 
 #wrapper {
@@ -132,7 +127,6 @@ footer {
       padding-left: 70px;
       width: 50%;
       display: inline-block;
-      float: right;
       text-align: center;
       border-left: #403E44 1px dashed;
     }
@@ -178,6 +172,7 @@ a.social {
 #goldaddress {
   color: gold;
 }
+
 .hero-image {
   background-image: url("https://d3oaxt0bwkjnjn.cloudfront.net/iahspfoundation/banner.jpg");
 
@@ -191,7 +186,6 @@ a.social {
 
   margin-bottom: 40px;
 
-
   @media screen and (max-width:1465px){&{height: 550px;}}
   @media screen and (max-width:1350px){&{height: 500px;}}
   @media screen and (max-width:1220px){&{height: 450px;}}
@@ -204,6 +198,7 @@ a.social {
   @media screen and (max-width:590px){&{height: 200px;}}
   @media screen and (max-width:500px){&{background-position: center left;}}
 }
+
 .hero-text {
   color: #fff;
   font-size: 22px;
@@ -218,12 +213,15 @@ a.social {
 .padding-footer {
   padding: 30px 0;
 }
+
 .margin-bottom-20 {
   margin-bottom: 20px;
 }
+
 .bg-color-white {
   background-color: #fff!important;
 }
+
 .content {
   color: #7e8998;
   padding: 20px 0;;
@@ -237,6 +235,7 @@ a.social {
   padding: 20px;
   background: #f1f2f7;
   border-radius: 20px;
+
   ul {
     list-style: none;
     margin: 0;
@@ -261,6 +260,12 @@ a.social {
     }
   }
 }
+
+// Spacing and Padding
+section.padding-section { padding: 80px 0; }
+
+.margin-bottom-32 { margin-bottom: 32px; }
+
 .btn-iahsp {
   color: #fff;
   background-color: #EAA824;
